--- a/PROYECTO FINAL/index.html
+++ b/PROYECTO FINAL/index.html
@@ -3,189 +3,15 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Tragaperras Ervigio</title>
+  <title>Tragaperras</title>
   <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
-  <style type="text/css">
-    /* Estilos para pantallas grandes */
-    @media only screen and (min-width: 1024px) {
-      body {
-        width: 960px;
-      }
-    }
-
-    /* Estilos para pantallas pequeñas */
-    @media only screen and (max-width: 1023px) {
-      body {
-        width: 100%;
-      }
-    }
-
-    body {
-      margin: auto;
-      font-family: 'Pacifico', cursive;
-      width: 100%;
-      height: 100%;
-      overflow-x: hidden;
-    }
-
-    img {
-      max-width: 100%;
-      vertical-align: top;
-    }
-
-    section {
-      position: relative;
-      width: 550px;
-      margin: auto;
-      margin-top: 20px;
-    }
-
-    .ventanas,
-    .botones {
-      display: flex;
-      justify-content: center;
-      margin-bottom: 12px;
-    }
-
-    .ventana:nth-child(2),
-    .boton:nth-child(2) {
-      margin: auto 16px;
-    }
-
-    .ventana {
-      padding: 6px;
-      width: 150px;
-      height: 150px;
-      border: 4px solid crimson;
-      border-radius: 12px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .boton {
-      padding: 6px;
-      box-shadow: 0 0 12px black inset;
-      width: 150px;
-      height: 40px;
-      border: 4px solid crimson;
-      border-radius: 12px;
-      text-align: center;
-      line-height: 40px;
-      font-size: 1.2em;
-      background-color: #fff0c9;
-      color: black;
-      cursor: pointer;
-      user-select: none;
-      -moz-user-select: none;
-    }
-
-    .boton:hover,
-    #lanzar:hover {
-      background-color: white;
-      box-shadow: 0 0 13px crimson inset;
-    }
-
-    header {
-      height: 168px;
-    }
-
-    #disponible {
-      display: flex;
-      align-items: center;
-    }
-
-    #credito {
-      color: orange;
-      font-size: 1.4em;
-    }
-
-    #dinero {
-      font-size: 5em;
-      line-height: 30px;
-    }
-
-    #lanzar {
-      cursor: pointer;
-      padding: 15px 18px 15px 10px;
-      user-select: none;
-      -moz-user-select: none;
-      width: 180px;
-      height: 180px;
-      border-radius: 50%;
-      border: 6px solid crimson;
-      text-align: center;
-      font-size: 3.9em;
-      line-height: 140px;
-      box-shadow: 0 0 13px black inset;
-      position: absolute;
-      left: 0;
-      right: 0;
-      background-color: #fff0c9;
-      margin: auto;
-      top: 1px;
-      box-sizing: border-box;
-    }
-
-    .euros {
-      font-size: 1.5rem;
-    }
-
-    #monedas {
-      width: 170px;
-      margin-top: 10px;
-    }
-
-    #monedas img {
-      width: 30px;
-      margin-right: 3px;
-      margin-bottom: 3px;
-    }
-
-    #velo {
-      display: none;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(255, 255, 255, 0.5);
-      position: fixed;
-      top: 0;
-      left: 0;
-      justify-content: center;
-      user-select: none;
-      -moz-user-select: none;
-    }
-
-    #cuadro_mensaje {
-      width: 540px;
-      height: 105px;
-      border-radius: 12px;
-      border: 5px solid crimson;
-      background-color: rgba(255, 255, 255, 0.9);
-      position: relative;
-      top: 355px;
-      padding: 5px;
-    }
-
-    #mensaje {
-      font-size: 1.7em;
-      color: crimson;
-      padding: 2px;
-      text-align: center;
-    }
-
-    #cruz {
-      position: absolute;
-      top: 5px;
-      right: 5px;
-      cursor: pointer;
-    }
-
-    .moneda {
-      margin-top: 5px;
-    }
-  </style>
-  <script type="text/javascript" src="index.js">
-  </script>
+  <link rel="stylesheet" href="estilos.css">
+  <script type="text/javascript" src="index.js"></script>
+  <link rel="preload" href="img/fondo2.png" as="image">
+  <link rel="preload" href="img/fondo3.png" as="image">
+  <link rel="preload" href="img/fondo4.jpg" as="image">
+  <link rel="preload" href="img/fondo5.jpg" as="image">
+  <link rel="preload" href="img/fondo6.jpg" as="image">
 </head>
 
 <body>
@@ -201,13 +27,13 @@
     </header>
     <div class="ventanas">
       <div class="ventana">
-        <img src="img/moneda.png">
+        <img src="img/bitcoin.png">
       </div>
       <div class="ventana">
-        <img src="img/moneda.png">
+        <img src="img/bitcoin.png">
       </div>
       <div class="ventana">
-        <img src="img/moneda.png">
+        <img src="img/bitcoin.png">
       </div>
     </div>
     <div class="botones">
