--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
     <!-- Header -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Juan Carlos Amela</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <div class="container justify-content-center">
+                <a class="navbar-brand d-none d-lg-block position-absolute" href="#">Juan Carlos Amela Barrero</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="#formacion">Formación</a>
                         </li>
+                        <a class="navbar-brand d-lg-none" href="#">Juan Carlos Amela</a>
                         <li class="nav-item">
                             <a class="nav-link" href="#proyectos">Proyectos</a>
                         </li>
@@ -44,135 +46,203 @@
         </nav>
         <div class="container text-center py-5 mb-4">
             <h1 class="font-weight-light text-black">Bienvenido a mi Portfolio</h1>
-            <p class="lead text-muted">Soy un desarrollador web front-end apasionado por el diseño y la tecnología. Aquí encontrarás información sobre mi formación, proyectos y habilidades.</p>
+            <p class="lead text-muted">Soy un desarrollador web front-end apasionado por el diseño y la tecnología. Aquí
+                encontrarás información sobre mi formación, proyectos y habilidades.</p>
         </div>
     </header>
+    
+    
 
 
     <!-- Main Content -->
     <main class="container">
 
         <!-- Formación Section -->
-        <section class="row">
-            <div class="col-md-6 mb-5">
-                <h2 id="formacion">Formación</h2>
-                <ul class="timeline">
+        <section class="row justify-content-center">
+            <div class="col-md-8 mb-5">
+                <h2 id="formacion" class="text-center">Formación</h2>
 
-                    <li>
-                        <h5><a href="https://serveiocupacio.gencat.cat/es/soc/com-ens-organitzem/centres-propis-formacio-cifo-cfpa/centres-dinnovacio-i-formacio-ocupacional-cifo/cifo-hospitalet-de-llobregat/"
-                                target="_blank">CIFO Hospitalet</a></h5>
-                        <p>Comencé mi trayectoria como estudiante con introducción a la programación JavaScript en CIFO
-                            Hospitalet.</p>
+                <!-- Tabs -->
+                <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="cifo-tab" data-bs-toggle="pill" href="#cifo" role="tab"
+                            aria-controls="cifo" aria-selected="true">CIFO Hospitalet</a>
                     </li>
-
-                    <li>
-                        <h5><a href="http://inkorformacion.com/" target="_blank">InKor Formación</a></h5>
-                        <p>Continué mi formación con un curso de front-end en InKor Formación, donde aprendí las bases
-                            del desarrollo web.</p>
+                    <li class="nav-item">
+                        <a class="nav-link" id="inkor-tab" data-bs-toggle="pill" href="#inkor" role="tab"
+                            aria-controls="inkor" aria-selected="false">InKor Formación</a>
                     </li>
-
-                    <li>
-                        <h5><a href="https://bluegoatlabs.com/" target="_blank">Blue Goat Labs</a></h5>
-                        <p>Realicé prácticas en empresa en Blue Goat Labs, donde adquirí experiencia en el trabajo en
-                            equipo y en el desarrollo de proyectos reales.</p>
+                    <li class="nav-item">
+                        <a class="nav-link" id="bluegoat-tab" data-bs-toggle="pill" href="#bluegoat" role="tab"
+                            aria-controls="bluegoat" aria-selected="false">Blue Goat Labs</a>
                     </li>
-
-                    <li>
-                        <h5><a href="https://www.barcelonactiva.cat/es/itacademy" target="_blank">IT Academy de
-                                Barcelona Activa</a></h5>
-                        <p>Actualmente estoy cursando un programa de front-end en IT Academy de Barcelona Activa para
-                            seguir mejorando mis habilidades en el desarrollo web.</p>
+                    <li class="nav-item">
+                        <a class="nav-link" id="itacademy-tab" data-bs-toggle="pill" href="#itacademy" role="tab"
+                            aria-controls="itacademy" aria-selected="false">IT Academy de Barcelona Activa</a>
                     </li>
                 </ul>
-            </div>
-            <!-- Proyectos Section -->
-            <div class="col-md-6 mb-5">
-                <h2 id="proyectos">Proyectos</h2>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="card">
 
-                            <img src="imagenes\tragaperras.jpg" class="card-img-top" alt="Imagen del proyecto final">
-                            <div class="card-body">
-                                <h5 class="card-title">Proyecto final del curso de introducción a la programación</h5>
-                                <a href="PROYECTO FINAL/index.html" class="btn btn-primary" target="_blank">Ver Proyecto</a>
-                            </div>
+                <!-- Tab panes -->
+                <div class="tab-content" id="pills-tabContent">
+                    <div class="tab-pane fade show active" id="cifo" role="tabpanel" aria-labelledby="cifo-tab">
+                        <p>Comencé mi trayectoria como estudiante con introducción a la programación JavaScript en <a
+                                href="https://serveiocupacio.gencat.cat/es/soc/com-ens-organitzem/centres-propis-formacio-cifo-cfpa/centres-dinnovacio-i-formacio-ocupacional-cifo/cifo-hospitalet-de-llobregat/"
+                                target="_blank">CIFO Hospitalet</a>.</p>
+                    </div>
+                    <div class="tab-pane fade" id="inkor" role="tabpanel" aria-labelledby="inkor-tab">
+                        <p>Continué mi formación con un curso de front-end en <a href="http://inkorformacion.com/"
+                                target="_blank">InKor Formación</a>, donde aprendí las bases
+                            del desarrollo web.</p>
+                    </div>
+                    <div class="tab-pane fade" id="bluegoat" role="tabpanel" aria-labelledby="bluegoat-tab">
+                        <p>Realicé prácticas en empresa en <a href="https://bluegoatlabs.com/" target="_blank">Blue Goat
+                                Labs</a>, donde adquirí experiencia en el trabajo en
+                            equipo y en el desarrollo de proyectos reales.</p>
+                    </div>
+                    <div class="tab-pane fade" id="itacademy" role="tabpanel" aria-labelledby="itacademy-tab">
+                        <p>Actualmente estoy cursando un programa de front-end en
+                            <a href="https://www.barcelonactiva.cat/es/itacademy" target="_blank">IT Academy de
+                                Barcelona Activa</a> para
+                            seguir mejorando mis habilidades en el desarrollo web.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+  
+
+    <!-- Proyectos Section -->
+ <!-- Proyectos Section -->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12 col-md-12 mb-5 text-center">
+            <h2 id="proyectos">Proyectos</h2>
+            <div class="row justify-content-center align-items-center text-center">
+                <div class="col-sm-6 col-lg-3">
+                    <div class="card">
+                        <img src="imagenes\tragaperras.jpg" class="card-img-top project-image"
+                            alt="Imagen del proyecto final">
+                        <div class="card-body">
+                            <a href="PROYECTO FINAL/index.html" class="btn btn-primary" target="_blank">Proyecto de
+                                Final de curso de introducción a la programación</a>
                         </div>
                     </div>
-
-                    <div class="col-sm-6">
-                        <div class="card">
-                            <img src="imagenes\boda.jpeg" class="card-img-top" alt="Imagen de la boda de mis amigos">
-                            <div class="card-body">
-                                <h5 class="card-title">Página web de la boda de mis amigos</h5>
-                                <a href="https://jcamela.github.io/Judith-tutu.github.io/index.html" class="btn btn-primary" target="_blank">Ver Proyecto</a>
-                            </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3">
+                    <div class="card">
+                        <img src="imagenes\sprint1.jpg" class="card-img-top project-image" alt="Imagen del sprint 1">
+                        <div class="card-body">
+                            <a href="https://github.com/JcAmela/Sprint1-ItAcademy.github.io.git" class="btn btn-primary"
+                                target="_blank">Enlace al repositorio de Github del Sprint 1
+                                It Academy</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3">
+                    <div class="card">
+                        <img src="imagenes\sprint2.avif" class="card-img-top project-image" alt="Imagen del sprint 2">
+                        <div class="card-body">
+                            <a href="https://github.com/JcAmela/Sprint2-ItAcademy.github.io.git" class="btn btn-primary"
+                                target="_blank">Enlace al repositorio de Github del Sprint 2
+                                It Academy</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3">
+                    <div class="card">
+                        <img src="imagenes\sprint3.avif" class="card-img-top project-image" alt="Imagen del sprint 3">
+                        <div class="card-body">
+                            <a href="https://github.com/JcAmela/Sprint3-ItAcademy.github.io.git" class="btn btn-primary"
+                                target="_blank">Enlace al repositorio de Github del Sprint 3
+                                It Academy</a>
                         </div>
                     </div>
                 </div>
             </div>
-        </section> 
-        <!-- End of Formación and Proyectos Section -->
-        <!-- Habilidades Section -->
-        <section class="row pb-5"> 
-            <div class="col-md-12 mb-5 pb-5">
-                <h2 id="habilidades">Habilidades</h2>
-                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
+        </div>
+    </div>
+</div>
 
-                        <div class="carousel-item active">
-                            <img src="logos/javascript.png" class="d-block mx-auto carousel-image" alt="Logo de JavaScript">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="logos/github.png" class="d-block mx-auto carousel-image" alt="Logo de Github">
-                        </div>
 
-                        <div class="carousel-item">
-                            <img src="logos/css.png" class="d-block mx-auto carousel-image" alt="Logo de CSS">
-                        </div>
 
-                        <div class="carousel-item">
-                            <img src="logos/html.png" class="d-block mx-auto carousel-image" alt="Logo de HTML">
-                        </div>
+    <!-- Habilidades Section -->
+    <section class="row pb-5">
+        <div class="col-md-12 text-center  ">
+            <h2 id="habilidades">Habilidades</h2>
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
 
-                        <div class="carousel-item">
-                            <img src="logos/vue.png" class="d-block mx-auto carousel-image" alt="Logo de Vue.js">
-                        </div>
-
-                        <div class="carousel-item">
-                            <img src="logos/nuxt3.png" class="d-block mx-auto carousel-image" alt="Logo de Nuxt3">
-                        </div>
-
-                        <div class="carousel-item">
-                            <img src="logos/python.png" class="d-block mx-auto carousel-image" alt="Logo de Python">
-                        </div>
+                    <div class="carousel-item active">
+                        <img src="logos/javascript.png" class="d-block mx-auto carousel-image" alt="Logo de JavaScript">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="logos/github.png" class="d-block mx-auto carousel-image" alt="Logo de Github">
                     </div>
 
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
+                    <div class="carousel-item">
+                        <img src="logos/css.png" class="d-block mx-auto carousel-image" alt="Logo de CSS">
+                    </div>
 
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
+                    <div class="carousel-item">
+                        <img src="logos/html.png" class="d-block mx-auto carousel-image" alt="Logo de HTML">
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="logos/vue.png" class="d-block mx-auto carousel-image" alt="Logo de Vue.js">
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="logos/nuxt3.png" class="d-block mx-auto carousel-image" alt="Logo de Nuxt3">
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="logos/python.png" class="d-block mx-auto carousel-image" alt="Logo de Python">
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="logos/angular-icon.svg" class="d-block mx-auto carousel-image" alt="Logo de Angular">
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="logos/typescript-icon-round.svg" class="d-block mx-auto carousel-image"
+                            alt="Logo de typescript">
+                    </div>
                 </div>
-            </div>
-        </section> 
-        <!-- End of Habilidades Section -->
-        <!-- Footer section -->
-        <footer class="py-3 bg-dark text-white">
-            <div class="container text-center">
-                <h2>Contacto</h2>
-                <p>Si deseas contactarme, puedes enviarme un correo electrónico a <a
-                        href="mailto:juancarlosamela@gmail.com">juancarlosamela@gmail.com</a></p>
-                <p class="m-0">© 2023 Juan Carlos Amela Barrero.</p>
-            </div>
-        </footer>
 
-        <!-- Scripts section -->
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    </body>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </section>
+</main>
+
+    <!-- Footer section -->
+    <footer class="container-fluid py-3 bg-dark text-white">
+        <div class="container-fluid text-center px-0">
+            <h2>Contacto</h2>
+            <p>Si deseas contactarme, puedes enviarme un correo electrónico a <a
+                    href="mailto:juancarlosamela@gmail.com">juancarlosamela@gmail.com</a></p>
+            <p class="m-0">© 2023 Juan Carlos Amela Barrero.</p>
+        </div>
+    </footer>
+
+
+    <!-- Scripts section -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
