--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Header -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container justify-content-center">
+            <div class="container justify-content-end justify-content-lg-center">
                 <a class="navbar-brand d-none d-lg-block position-absolute" href="#">Juan Carlos Amela Barrero</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
