--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
                             <div class="flip-card-front">
                                 <img src="imagenes/tragaperras.jpg" alt="Tragaperras Proyecto" class="card-img-top">
                                 <div class="card-content">
-                                    <h3>Tragaperras</h3>
+                                    <h3>Slot Machine</h3>
                                     <p>Introduccion Javascript | Fundamentos</p>
                                 </div>
                             </div>
                             <div class="flip-card-back">
-                                <h3>Tragaperras Proyecto</h3>
-                                <p>Un emocionante juego de máquina tragaperras construido desde cero utilizando Javascript.</p>
+                                <h3>Slot Machine</h3>
+                                <p>Un emocionante juego de Slots construido desde cero utilizando Javascript.</p>
                                 <a href="PROYECTO FINAL/index.html" class="btn btn-primary" target="_blank">Ver más</a>
                             </div>
                         </div>
